<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">beer-yo-ass</string>

    <!-- Strings related to navigation bar -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_login">Login</string>
    <string name="nav_my_page">My page</string>


    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="textview_username">Username</string>
    <string name="textview_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign up</string>

    <!-- Strings in layout list item.xml -->
    <string name="beer_image">Beer image</string>

    <!-- String in login and signup fragments -->
    <string name="login_fragment">Don\'t have an account? Sign up</string>
    <string name="signup_fragment">Already have an account? Login</string>


    <!-- Strings related to beerPage -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volume">Volume</string>
    <string name="stars">Stars</string>
    <string name="price">Price</string>
    <string name="alcohol">Alcohol</string>
    <string name="taste">Taste</string>
    <string name="comment">Comment</string>
    <string name="comment_here">Comment here</string>
    <!-- Strings related to searchPage -->
    <string name="alphabetical">Alphabetical</string>
    <string name="by_price">By price</string>
    <string name="by_alcohol">By alcohol</string>
    <string name="Search_instructions">Filter Results</string>
    <string name="price_under">to</string>
    <string name="price_over">Price from:</string>
    <string name="search">Search</string>
    <string name="name" tools:ignore="ExtraTranslation">Name</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="picture_of_beer">Picture of Beer</string>
    <string name="beer_yo_ass">Beer-Yo-Ass</string>
    <string name="logo">Logo</string>
    <string name="button">Button</string>
    <string name="addingToFav">Adding beer to favorites</string>
    <string name="title_activity_rating_popup">RatingPopup</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reflex">ReflexActivity</string>
    <string name="type_instructions">How fast can you <font color='#F50000'>type the alphabet</font>! We´ll tell you how drunk you are!</string>


</resources>
