<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="56dp"
    tools:context=".SignupFragment">

    <EditText
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"

        android:layout_marginTop="158dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:text="@string/textview_password"
        />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/text_password"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="80dp"

        android:ems="10"
        android:inputType="textPersonName"
        tools:text="@string/textview_username"
        />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="200dp"
        android:text="@string/button_signup"
        />


    <TextView
        android:id="@+id/got_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:layout_marginHorizontal="80dp"

        android:textSize="16dp"
        android:text="@string/signup_fragment"
        />



</FrameLayout>