<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="370dp"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/textview_password"
        />


    <EditText
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/text_password"
        android:layout_marginTop="300dp"
        android:layout_marginHorizontal="80dp"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"
        android:hint="@string/textview_username"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="412dp"
        android:text="@string/button_login"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"/>


    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginHorizontal="80dp"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"
        android:text="@string/login_fragment"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="216dp"
        android:layout_height="212dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/roundlogo"
        android:layout_gravity="center_horizontal"/>
</FrameLayout>